# cthughanix

./: .clang-format  .gitignore  .rsync-filter  AUTHORS  AUTHORS.md  CMakeLists.txt  COPYING  ChangeLog  CoreOptionTODO.md  DOS_BUILD_AND_ASSETS.md  DOS_LINUX_DIFFERENCES.md  DOS_PROJECT_STRUCTURE.md  DOS_PROJECT_SUMMARY.md  DOS_RUNTIME_MAP.md  DOS_SEAMS_AND_RISKS.md  DOS_VERIFICATION.md  EffectControlTODO.md  ExplicitDependencyRefactorPlan.md  IMAGE_GENERATION.md  INSTALL  INSTALL.md  Makefile.am  Makefile.pre  NEWS  PROJECT_BUILD_AND_PORTING.md  PROJECT_MAIN_LOOP_EXPLAINED.md  PROJECT_RUNTIME_MAP.md  PROJECT_SEAMS_AND_RISKS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PROJECT_VERIFICATION.md  PhasedRefactorApproach.md  Porting.md  README  README.md  TODO  TODO-2007.md  TODO.md  autogen.sh  configure.in  (+8 more)
cmake/: config.h.in
doc/: Makefile.am  configure.texi  cthugha.1  cthugha.texi  introduction.texi  mixed.texi  other.texi  overview.texi  parameters.texi  technical.texi  warper.txt
map/: bbr001.map  bears.map  biglake.map  blend1.map  blend3.map  bluorng.map  cat.map  cool.map  cranes.map  cycler.map  darkie.map  fire2.map  firestrm.map  frcoast.map  froth3.map  internal_1.map  internal_2.map  internal_3.map  internal_4.map  internal_5.map  internal_6.map  internal_7.map  light.map  mandel.map  mandel2.map  masts.map  mixed.map  necklace.map  okay.map  owl.map  panda.map  porche01.map  rain4x3.map  rainbow3.map  rainbow6.map  rby.map  redand.map  room.map  sanfran.map  seattle.map  (+6 more)
project-docs/: ARCHITECTURE.md  BUILD_SYSTEM.md  CTHUGHA_JS_COMPARISON.md  CTHUGHA_JS_PORTING_PLAN.md  DATA_FLOW.md  FILE_ORGANIZATION.md  INDEX.md  PROJECT_SUMMARY.md
resources/tab/: CMakeLists.txt  Makefile.am  bighalfwheel.cmd  cmdRead.cc  cmd_bighalfwheel.c  cmd_downspiral.c  cmd_gentable.c  cmd_huricn.c  cmd_smoke.c  cmd_space.c  hurricane.cmd  imath.c  rotate.cmd  yin-yang.cmd
src/: Application.cc  Application.h  Audio.cc  Audio.h  AudioAnalyzer.cc  AudioAnalyzer.h  AudioBuffer.cc  AudioDSPOutput.cc  AudioFrame.cc  AudioFrame.h  AudioIngest.cc  AudioIngest.h  AudioInputProcessor.cc  AudioInternal.cc  AudioInternal.h  AudioMiniAudioOutput.cc  AudioOptions.h  AudioOutput.cc  AudioOutputDump.cc  AudioOutputDump.h  AudioPassthrough.cc  AudioPassthrough.h  AudioProcessor.cc  AudioProcessor.h  AudioPulseOutput.cc  AudioRuntime.cc  AudioRuntime.h  AudioSettings.cc  AudioSettings.h  AudioSystem.cc  AudioSystem.h  AudioTypes.h  AudioVisualBridge.cc  AudioVisualBridge.h  AutoChangeControls.cc  AutoChangeControls.h  AutoChangeSettings.h  AutoChanger.cc  AutoChanger.h  BitmapFont.h  (+328 more)
tab/: Makefile.am  cmdRead.cc  cmdRead.cmd  cmd_bighalfwheel.c  cmd_downspiral.c  cmd_gentable.c  cmd_huricn.c  cmd_randswirls.c  cmd_smoke.c  cmd_space.c  downspiral.cmd  gentable.cmd  imath.c  randswirls.cmd  smoke.cmd  space-fast.cmd  space-slow.cmd
tests/: CMakeLists.txt
tests/benchmarks/: AudioPipelineBench.cc  CMakeLists.txt  DisplayScreensBench.cc  README.md  VideoEffectsBench.cc  VisualEffectsBench.cc
tests/fixtures/ini/perf/: 00.ini  01.ini  02.ini  03.ini  04.ini  05.ini  06.ini  07.ini  08.ini  09.ini  10.ini  11.ini  12.ini  13.ini  14.ini  perf.scenescript
tests/fixtures/visual/: README.md
tests/headers/: check-headers.sh
tests/unit/: AudioDecodedHistoryTest.cc  AudioDeviceNegotiationTest.cc  AudioFrameProcessorTest.cc  AudioIngestTest.cc  AudioOutputConfigTest.cc  AudioOutputDumpTest.cc  AudioPassthroughTest.cc  AudioVisualBridgeAutoChangerTest.cc  AudioVisualBridgeFrameTest.cc  AutoChangerCommandSinkTest.cc  ConfigurationDependencyBoundaryTest.cc  ConfigurationTest.cc  ControlCommandMapperTest.cc  ControlServiceIntegrationTest.cc  ControlSnapshotTest.cc  CthughaDisplayPresentationTest.cc  CthughaDisplayViewportTest.cc  DisplayOwnershipTest.cc  DisplayRuntimeTest.cc  EffectControlRandomTest.cc  EffectPresetCatalogTest.cc  FlameStorageLayoutTest.cc  FpsOverlayTest.cc  FrameClockTest.cc  FrameCompletionTest.cc  FrameFilterchainDiagnosticsTest.cc  FrameGeneratorBoundaryTest.cc  FramePacerTest.cc  FrameRateMeterTest.cc  FrameStoreTest.cc  FrameTransitionControllerTest.cc  ImagePlacementTest.cc  IndexedDisplayFrameTest.cc  IndexedFrameTestFixtures.h  IndexedFrameTestFixturesTest.cc  InterfaceRuntimeTest.cc  LegacySceneChoiceLockTest.cc  LegacySceneSelectionAdaptersTest.cc  LegacySceneSelectionFactoryTest.cc  MixerControlsTest.cc  (+24 more)
tools/: otb_to_bitmap_font.py  palette-map-png.py  run_audio_pipeline_benchmarks.py  run_scene_script_benchmark.py  run_visual_effects_benchmarks.py  sort-palette.py
wx/: CthughaPanelBase.cpp  CthughaPanelBase.h  CthughaPanelFrame.cpp  CthughaPanelFrame.h  panel.fbp
