info_TEXINFOS = cthugha.texi
cthugha_TEXINFOS = version.texi					\
		   other.texi         technical.texi		\
		   configure.texi     overview.texi		\
		   parameters.texi    mixed.texi		\
		   introduction.texi
noinst_DATA = cthugha.ps
man_MANS = cthugha.1

EXTRA_DIST =  warper.txt cthugha.ps cthugha.1

